fixing overflow errors on mobie

--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -104,6 +104,7 @@ nav ul li a{
 	height: 100vh !important;
 	width: 100vw !important;
 	-webkit-overflow-scrolling: touch;
+	overflow: hidden;
 }
 
 #slideshow div {
